web: fix unreadable light mode

--- a/static/index.css
+++ b/static/index.css
@@ -10,8 +10,10 @@
   opacity: 1;
 }
 
-input[type=text], input[type=text]::placeholder {
-  color: #ccc;
+@media (prefers-color-scheme: dark) {
+  input[type=text], input[type=text]::placeholder {
+    color: #ccc;
+  }
 }
 
 .grid {
